--- a/org.xtext.example.mydsl/build.gradle
+++ b/org.xtext.example.mydsl/build.gradle
@@ -10,6 +10,7 @@ configurations {
 dependencies {
 	mwe2 "org.eclipse.emf:org.eclipse.emf.mwe2.launch:2.11.3"
 	mwe2 "org.eclipse.xtext:org.eclipse.xtext.xtext.generator:${xtextVersion}"
+	mwe2 "org.eclipse.xtext:org.eclipse.xtext.common.types:${xtextVersion}"
 }
 
 task generateXtextLanguage(type: JavaExec) {
